<resources>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">18d8be4f27be33a36800c9791920efdf</string>
    <string name="Manual_selection">تحديد يدوي</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_expier">انتهت صلاحية الحساب.. الرجاء التواصل مع إدارة البرنامج للإشتراك بالبرنامج</string>
    <string name="active_user_count">عدد المستخدمين النشطين</string>
    <string name="add_group_txt">إضافة مجموعة</string>
    <string name="add_one_only">إضافة واحد فقط</string>
    <string name="add_to_server">اضافة الى السيرفر</string>
    <string name="add_userhotspot_title">إضافة مستخدمين هوتسبوت</string>
    <string name="all_selection">تحديد الكل</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">MUMS MOBILE</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auth_failed">فشل المصادقة</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="cannt_regis">لا يمكنك التسجيل</string>
    <string name="cards_count">عدد الكروت: %1$d</string>
    <string name="cards_counts">عدد الكروت</string>
    <string name="char_only">حروف فقط</string>
    <string name="char_with_number">حروف وارقام</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="clear_sorting">Clear</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="click_on_row">قم بالضغط باستمرار على السجل الذي تريده</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="conn_prob">حدث مشكله - تأكد من اتصال بالانترنت ��</string>
    <string name="connect_internet">تاكد من اتصالك بالانترنت - قم بإيقاف اي برنامج vpn</string>
    <string name="connect_internet2">تاكد من اتصالك بالانترنت</string>
    <string name="connect_on_frist">الربط عند اول استخدام</string>
    <string name="connection_expier">انتهت مهلة الاتصال..تاكد من الاتصال بالانترنت..اذا كنت تستخدم هذا التطبيق في دولة (اليمن) قُم بالضغط هنــا لمزيد من التفاصيل</string>
    <string name="connection_expiern">انتهت مهلة الاتصال..تاكد من الاتصال بالانترنت.. لمزيد من التفاصيل قُم بالضغط هنــا</string>
    <string name="create_account">Create Account</string>
    <string name="custom_auth_signin_status_failed">Error: sign in failed</string>
    <string name="custom_auth_signin_status_user">User ID: %s</string>
    <string name="custom_token">Custom Token</string>
    <string name="customactivityoncrash_error_activity_close_app">Close app</string>
    <string name="customactivityoncrash_error_activity_error_details">Error details</string>
    <string name="customactivityoncrash_error_activity_error_details_clipboard_label">Error information</string>
    <string name="customactivityoncrash_error_activity_error_details_close">Close</string>
    <string name="customactivityoncrash_error_activity_error_details_copied">Copied to clipboard</string>
    <string name="customactivityoncrash_error_activity_error_details_copy">Copy to clipboard</string>
    <string name="customactivityoncrash_error_activity_error_details_title">Error details</string>
    <string name="customactivityoncrash_error_activity_error_occurred_explanation">An unexpected error occurred.\10Sorry for the inconvenience.</string>
    <string name="customactivityoncrash_error_activity_restart_app">Restart app</string>
    <string name="default_web_client_id">487006380278-75tponli4oo0q45hhdtrdjbld7dgrb8r.apps.googleusercontent.com</string>
    <string name="delete_selected">حذف المحدد</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>
    <string name="desc_firebase_lockup">تاكد من رقم الموبايل</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>
    <string name="desc_generic_idp">Use a generic OAuth identity provider, like Apple, Microsoft, Yahoo, or Twitter to authenticate with Firebase.</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>
    <string name="desc_multi_factor">Use SMS for two-factor authentication. Note: this feature is only available for Cloud Identity Platform.</string>
    <string name="desc_passwordless">Use only an email to authenticate with Firebase.</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>
    <string name="disconnect">Disconnect</string>
    <string name="email_fmt">Email: %s</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="enroll_mfa">Enroll MFA</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_icon_content_description">Error</string>
    <string name="error_sign_in_failed">Sign in failed, see logs for details.</string>
    <string name="expier_cards_count">عدد الكروت منتهية %1$s: %1$d</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="facebook_app_id">561958544313292</string>
    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="fill_all">الرجاء تعبئة كافة الحقول</string>
    <string name="firebase_database_url">https://mums-mobile-13036.firebaseio.com</string>
    <string name="firebase_status_fmt">Firebase UID: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>
    <string name="gcm_defaultSenderId">487006380278</string>
    <string name="generic_label_provider">Provider:</string>
    <string name="generic_signin_fmt">Sign In with %s</string>
    <string name="generic_status_fmt">User: %s (%s)</string>
    <string name="generic_title_text">OAuth Sign In</string>
    <string name="get_custom_token">Get Token</string>
    <string name="google_api_key">AIzaSyDugv1hXaFt6OZxvWvAcdbTWrNU5TR2IKs</string>
    <string name="google_app_id">1:487006380278:android:1da1f79240dbd83949ccd7</string>
    <string name="google_crash_reporting_api_key">AIzaSyDugv1hXaFt6OZxvWvAcdbTWrNU5TR2IKs</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="phone_title_text">التحقق من رقم الموبايل</string>
    <string name="resend_phone_auth">لم استلم الرمز,إعادة إرسال</string>
    <string name="sign_out">Sign Out</string>
    <string name="signed_out">الخروج لإستخدام رقم اخر</string>
    <string name="start_phone_auth">إرسال الرقم للتحقق</string>
    <string name="verify_phone_auth">التحقق من رمز التأكيد</string>
</resources>