<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:lgrupo="http://schemas.android.com/apk/lib/com.blogspot.yemeninfo4it.mumsmobile_app" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent" android:layoutDirection="rtl">
    <LinearLayout android:orientation="vertical" android:id="@+id/mtool" android:layout_width="match_parent" android:layout_height="wrap_content">
        <include layout="@layout/toolbar_act"/>
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <LinearLayout android:gravity="center" android:orientation="horizontal" android:padding="2dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="7sp" android:layoutDirection="rtl">
                <RadioButton android:textSize="14sp" android:textStyle="bold" android:textColor="@color/white" android:id="@+id/validity_rad" android:background="@drawable/select_draw_new" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:button="@android:color/transparent" android:text="منتهية الصلاحية" android:layout_marginStart="4dp" android:layout_marginEnd="4dp"/>
                <RadioButton android:textSize="14sp" android:textStyle="bold" android:id="@+id/tramit_rad" android:background="@drawable/select_draw_new" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@android:color/transparent" android:text="منتهية التحميل" android:layout_marginStart="4dp" android:layout_marginEnd="4dp"/>
                <RadioButton android:textSize="14sp" android:textStyle="bold" android:id="@+id/time_rad" android:background="@drawable/select_draw_new" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@android:color/transparent" android:text="منتهية الوقت" android:layout_marginStart="4dp" android:layout_marginEnd="4dp"/>
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@+id/main_layout" android:visibility="visible" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp">
                <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="14sp" android:textStyle="bold" android:textColor="@color/white" android:id="@+id/loadexpir" android:background="@drawable/rect_blue" android:paddingLeft="9dp" android:paddingTop="7dp" android:paddingRight="9dp" android:paddingBottom="8dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="2dp" android:layout_marginTop="8dp" android:layout_marginRight="2dp" android:layout_marginBottom="8dp" android:text="عرض الكروت المنتهية"/>
                </LinearLayout>
                <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content"/>
                <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5sp">
                    <TextView android:textSize="13sp" android:textStyle="bold" android:textColor="#000" android:id="@+id/countuser" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="2dp" android:layout_marginTop="3dp" android:layout_marginRight="2dp" android:layout_marginBottom="3dp" android:text="العدد" android:layout_weight="1" android:textAlignment="center"/>
                    <TextView android:textSize="13sp" android:textStyle="bold" android:textColor="#000" android:id="@+id/deleted_count" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="2dp" android:layout_marginTop="2dp" android:layout_marginRight="2dp" android:layout_marginBottom="3dp" android:layout_weight="1" android:textAlignment="center"/>
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp">
                    <androidx.appcompat.widget.AppCompatCheckBox android:textSize="12sp" android:textStyle="bold" android:textColor="@color/mainColor" android:id="@+id/chk_select_all" android:layout_width="95dp" android:layout_height="wrap_content" android:text="@string/all_selection" app:buttonTint="@color/mainColor"/>
                    <Spinner android:textSize="13sp" android:gravity="center_vertical" android:id="@+id/spinner_select" android:background="@drawable/rect" android:padding="4dp" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="34dp" android:layout_marginTop="3dp" android:hint="@string/Manual_selection" android:singleLine="true" android:spinnerMode="dialog"/>
                    <Button android:textSize="13sp" android:textStyle="bold" android:textColor="#ffffff" android:layout_gravity="start" android:id="@+id/btn_delete_all" android:background="@drawable/loginbutton_selector" android:layout_width="wrap_content" android:layout_height="37dp" android:layout_margin="1.5dp" android:text="@string/delete_selected" android:textAllCaps="false" android:drawableEnd="@drawable/delete_icon" android:paddingStart="8dp" android:paddingEnd="8dp"/>
                </LinearLayout>
                <HorizontalScrollView android:scrollbars="none|horizontal|vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp">
                    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
                        <ListView android:id="@+id/listView_deluser" android:scrollbars="none|horizontal|vertical" android:layout_width="match_parent" android:layout_height="match_parent"/>
                    </LinearLayout>
                </HorizontalScrollView>
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@+id/main_layout2" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp">
                <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content"/>
                <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@+id/profile_layout" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginStart="10sp" android:layout_marginEnd="10sp">
                        <TextView android:textSize="13sp" android:textStyle="bold" android:textColor="#000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="3dp" android:layout_marginBottom="3dp" android:text="تحديد الباقة"/>
                        <Spinner android:textSize="14sp" android:textColor="@color/white" android:id="@+id/profilename" android:background="@drawable/rect" android:padding="2sp" android:layout_width="0dp" android:layout_height="35sp" android:layout_marginLeft="10dp" android:layout_marginTop="5dp" android:layout_marginRight="10dp" android:layout_marginBottom="5dp" android:singleLine="true" android:layout_weight="1" android:spinnerMode="dialog" android:textAlignment="center"/>
                        <TextView android:textSize="14sp" android:textStyle="bold" android:textColor="@color/white" android:id="@+id/loadexpir2" android:background="@drawable/rect_blue" android:paddingTop="7dp" android:paddingBottom="8dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:text="عرض الكروت" android:paddingStart="7sp" android:paddingEnd="7sp" android:layout_marginStart="0dp" android:layout_marginEnd="10dp"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5sp">
                    <TextView android:textSize="13sp" android:textStyle="bold" android:textColor="#000" android:id="@+id/countuser2" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="2dp" android:layout_marginTop="3dp" android:layout_marginRight="2dp" android:layout_marginBottom="3dp" android:text="العدد" android:layout_weight="1" android:textAlignment="center"/>
                    <TextView android:textSize="13sp" android:textStyle="bold" android:textColor="#000" android:id="@+id/deleted_count2" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="2dp" android:layout_marginTop="2dp" android:layout_marginRight="2dp" android:layout_marginBottom="3dp" android:layout_weight="1" android:textAlignment="center"/>
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp">
                    <androidx.appcompat.widget.AppCompatCheckBox android:textSize="12sp" android:textStyle="bold" android:textColor="@color/mainColor" android:id="@+id/chk_select_all2" android:layout_width="95dp" android:layout_height="wrap_content" android:text="تحديد الكل" app:buttonTint="@color/mainColor"/>
                    <Spinner android:textSize="13sp" android:gravity="center_vertical" android:id="@+id/spinner_select2" android:background="@drawable/rect" android:padding="4dp" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="34dp" android:layout_marginTop="3dp" android:hint="تحديد يدوي" android:singleLine="true" android:spinnerMode="dialog"/>
                    <Button android:textSize="13sp" android:textStyle="bold" android:textColor="#ffffff" android:layout_gravity="start" android:id="@+id/btn_delete_all2" android:background="@drawable/loginbutton_selector" android:layout_width="wrap_content" android:layout_height="37dp" android:layout_margin="1.5dp" android:text="@string/delete_selected" android:textAllCaps="false" android:drawableEnd="@drawable/delete_icon" android:paddingStart="8dp" android:paddingEnd="8dp"/>
                </LinearLayout>
                <HorizontalScrollView android:id="@+id/main_layout2Horz" android:scrollbars="none|horizontal|vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp">
                    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
                        <ListView android:id="@+id/myCustomListView" android:scrollbars="none|horizontal|vertical" android:layout_width="match_parent" android:layout_height="match_parent"/>
                    </LinearLayout>
                </HorizontalScrollView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
